runtime AJV validation

--- a/src/generators/javascript/browser.hbs
+++ b/src/generators/javascript/browser.hbs
@@ -182,7 +182,7 @@ function withTypewriterContext(options: Segment.Options = {}): Segment.Options {
 	}
 }
 
-{{#each trackCalls}}
+{{#each tracks}}
 
 {{#if description}}
 /**
