export interface types

--- a/src/generators/javascript/browser.hbs
+++ b/src/generators/javascript/browser.hbs
@@ -135,7 +135,7 @@ namespace Segment {
  * {{description}}
  */
 {{/if}}
-interface {{name}} {
+export interface {{name}} {
 	{{#each properties}}
 	{{#if description}}
 	/**
