--- a/src/generators/javascript/node.hbs
+++ b/src/generators/javascript/node.hbs
@@ -145,7 +145,7 @@ export namespace Segment {
  * {{description}}
  */
 {{/if}}
-interface {{name}} {
+export interface {{name}} {
 	{{#each properties}}
 	{{#if description}}
 	/**
