add noop set in production browser builds note

--- a/src/generators/javascript/browser.hbs
+++ b/src/generators/javascript/browser.hbs
@@ -189,7 +189,10 @@ export const defaultValidationErrorHandler: ValidationErrorHandler = (message, v
 let onValidationError = defaultValidationErrorHandler
 {{/if}}
 
-/** Update the run-time configuration of this Typewriter client. */
+/**
+ * Update the run-time configuration of this Typewriter client.
+ * Note that this is currently a no-op for production builds.
+ */
 export function setTypewriterOptions(options: TypewriterOptions) {
 	{{#if isDevelopment}}
 	onValidationError = options.onValidationError || onValidationError
