WIP typewriter example

--- a/src/generators/javascript/browser.hbs
+++ b/src/generators/javascript/browser.hbs
@@ -11,7 +11,7 @@
  * 
  * You can install it with: `npm install --save-dev ajv`.
  */
-import Ajv from 'ajv'
+import * as Ajv from 'ajv'
 {{/if}}
 
 declare global {
