single autocomplete tracking plan during init

--- a/src/cli/typewriter.yml.hbs
+++ b/src/cli/typewriter.yml.hbs
@@ -3,7 +3,7 @@
 
 {{#if tokenCommand}}
 tokenCommand: {{tokenCommand}}
-{{#else}}
+{{else}}
 # Currently, Typewriter is configured to read the token from TYPEWRITER_TOKEN in your environment.
 # Alternatively, you can supply this token using a shell command, which could use your team's secret
 # management tooling to fetch a shared Segment API token.
