initial tokenCommand, generate after init

--- a/src/cli/typewriter.yml.hbs
+++ b/src/cli/typewriter.yml.hbs
@@ -20,7 +20,7 @@ language:
 
 trackingPlans:
   {{#each trackingPlans}}
-  # {{name}}
+  # Tracking Plan: {{name}}
   # https://app.segment.com/{{workspaceSlug}}/protocols/tracking-plans/{{id}}
   - id: {{id}}
     workspaceSlug: {{workspaceSlug}}
