use default Ajv import

--- a/src/generators/javascript/browser.hbs
+++ b/src/generators/javascript/browser.hbs
@@ -11,7 +11,7 @@
  * 
  * You can install it with: `npm install --save-dev ajv`.
  */
-import * as Ajv from 'ajv'
+import Ajv from 'ajv'
 {{/if}}
 import * as Segment from './segment'
 
