--- a/src/generators/javascript/index.hbs
+++ b/src/generators/javascript/index.hbs
@@ -50,25 +50,25 @@ export interface TypewriterOptions {
 	 *
 	 * By default, it will throw errors if NODE_ENV = "test" so that tests will fail
 	 * if a message does not match the spec. Otherwise, errors will be logged to stderr.
-	 * Also by default, invalid messages will be dropped.
+	 * Also by default, messages that generate Violations will be dropped.
 	 */
-	onValidationError?: ValidationErrorHandler
+	onViolation?: ViolationHandler
 }
 
-export type ValidationErrorHandler = (
+export type ViolationHandler = (
 	message: {{#if isBrowser}}Record<string, any>{{else}}Segment.TrackMessage<Record<string, any>>{{/if}},
-	{{!-- Note: we don't want to require an import of ajv in production just for this type definition. --}}
-	validationErrors: {{#if isDevelopment}}Ajv.ErrorObject{{else}}any{{/if}}[]
+	{{!-- Swap the type definitions here so we don't want depend on ajv in production just for this type definition. --}}
+	violations: {{#if isDevelopment}}Ajv.ErrorObject{{else}}any{{/if}}[]
 ) => boolean
 
 {{#if isDevelopment}}
-export const defaultValidationErrorHandler: ValidationErrorHandler = (message, validationErrors) => {
+export const defaultValidationErrorHandler: ViolationHandler = (message, violations) => {
 	const msg = JSON.stringify({
 		type: 'Typewriter JSON Schema Validation Error',
 		description:
 			`You made an analytics call (${message.event}) using Typewriter that doesn't match the ` +
 			'Tracking Plan spec. Your analytics call will continue to fire in production.',
-		errors: validationErrors,
+		errors: violations,
 	}, undefined, 2)
 
 	if (process.env.NODE_ENV === 'test') {
@@ -79,7 +79,7 @@ export const defaultValidationErrorHandler: ValidationErrorHandler = (message, v
 	return false
 }
 
-let onValidationError = defaultValidationErrorHandler
+let onViolation = defaultValidationErrorHandler
 {{/if}}
 
 {{!-- We use a closure so we can lazy-resolve window.analytics in browser environments. --}}
@@ -89,16 +89,16 @@ let analytics: () => ({{#if isBrowser}}Segment.AnalyticsJS{{else}}Segment.Analyt
  * Update the run-time configuration of this Typewriter client.
  */
 export function setTypewriterOptions(options: TypewriterOptions) {
-	analytics = () => options.analytics{{#if isBrowser}} || window.analytics{{/if}}
+	analytics = options.analytics ? () => options.analytics{{#if isBrowser}} || window.analytics{{/if}} : analytics
 	{{#if isDevelopment}}
-	onValidationError = options.onValidationError || onValidationError
+	onViolation = options.onViolation || onViolation
 	{{/if}}
 }
 
 {{#if isDevelopment}}
 /**
 	* Validates a message against a JSON Schema using Ajv. If the message
-	* is invalid, the `onValidationError` handler will be called.
+	* is invalid, the `onViolation` handler will be called.
 	* Returns true if the message should be sent on to Segment, and false otherwise.
 	*/
 function matchesSchema(
@@ -110,7 +110,7 @@ function matchesSchema(
 	ajv.addMetaSchema(require('ajv/lib/refs/json-schema-draft-04.json'))
 
 	if (!ajv.validate(schema, message) && ajv.errors) {
-		return onValidationError(message, ajv.errors)
+		return onViolation(message, ajv.errors)
 	}
 
 	return true
@@ -133,6 +133,21 @@ function withTypewriterContext{{#unless isBrowser}}<P>{{/unless}}(message: {{#if
 		},
 	}
 }
+
+{{#unless isBrowser}}
+const missingAnalyticsNodeError = new Error(`You must set an analytics-node instance:
+
+>	const SegmentAnalytics = require('analytics-node')
+>	const { setTypewriterOptions } = require('./analytics')
+>
+>	const analytics = new SegmentAnalytics('SEGMENT_WRITE_KEY')
+>	setTypewriterOptions({
+>		analytics: analytics,
+>	})
+
+For more information on analytics-node, see: https://segment.com/docs/sources/server/node/quickstart/
+`)
+{{/unless}}
 
 {{#each tracks}}
 {{#if description}}
@@ -196,6 +211,8 @@ export function {{functionName}}(
 	const a = analytics()
 	if (a) {
 		a.track(msg, callback)
+	} else {
+		throw missingAnalyticsNodeError
 	}
 }
 {{/if}}
