--- a/src/generators/ios/templates/class.h.hbs
+++ b/src/generators/ios/templates/class.h.hbs
@@ -5,7 +5,10 @@
 #import <Foundation/Foundation.h>
 #import <Analytics/SEGSerializableValue.h>
 #import "SEGTypewriterSerializable.h"
-{{!-- TODO: import any sub objects --}}
+#import "SEGTypewriterUtils.h"
+{{#each imports}}
+#import {{this}}
+{{/each}}
 
 @interface {{name}} : NSObject<SEGTypewriterSerializable>
 
@@ -16,7 +19,7 @@
 @property ({{modifiers}}, {{#if isRequired}}nonnull{{else}}nullable{{/if}}) {{type}}{{name}};
 {{/each}}
 
-+(nonnull instancetype) {{initFunctionSignature}};
++(nonnull instancetype) {{functionSignature "init" properties false}};
 
 -(nonnull SERIALIZABLE_DICT) toDictionary;
 
