Clean up example

--- a/src/generators/javascript/segment.hbs
+++ b/src/generators/javascript/segment.hbs
@@ -63,7 +63,7 @@ export interface Options {
     AppsFlyer?: {
       appsFlyerId: string
     }
-    [key: string]: boolean | { [key: string]: any }
+    [key: string]: boolean | { [key: string]: any } | undefined
   }
   /**
   * A dictionary of extra context to attach to the call.
