Add sanitization for moduleKind and scriptTarget

--- a/src/cli/typewriter.yml.hbs
+++ b/src/cli/typewriter.yml.hbs
@@ -5,7 +5,7 @@
 tokenCommand: {{tokenCommand}}
 {{/if}}
 
-# You can configure the options of this client's generator:
+# You can find more documentation on configuring this client in the Segment docs.
 # See: https://segment.com/docs/typewriter/{{client.language}}
 client:
   {{#each client}}
