--- a/src/generators/javascript/segment.hbs
+++ b/src/generators/javascript/segment.hbs
@@ -64,7 +64,7 @@ export interface Options {
     AppsFlyer?: {
       appsFlyerId: string
     }
-    [key: string]: boolean | { [key: string]: any } | undefined
+    [key: string]: boolean | { [key: string]: any }{{#if isBrowser}} | undefined{{/if}}
   }
   /**
   * A dictionary of extra context to attach to the call.
