--- a/src/generators/javascript/segment.hbs
+++ b/src/generators/javascript/segment.hbs
@@ -7,21 +7,12 @@
 /**
  * The analytics.js snippet should be available via window.analytics.
  * You can install it by following instructions at: https://segment.com/docs/sources/website/analytics.js/quickstart/
+ * Make sure to also include the TypeScript declarations with: `npm install --dev @types/segment-analytics`
  */
 declare global {
-  interface Window {
-    analytics?: AnalyticsJS
-  }
-}
-
-/** A minimal interface for Segment's analytics.js. */
-export interface AnalyticsJS {
-  track: (
-    event: string,
-    properties?: Record<string, any>,
-    options?: Options,
-    callback?: Callback
-  ) => void
+	interface Window {
+		analytics?: SegmentAnalytics.AnalyticsJS
+	}
 }
 
 /** The callback exposed by analytics.js. */
